# R-Type

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  R-TypeCommon  README.md  build.sh  clean.sh  conanfile.txt  toto.txt  vcpkg.json
.github/workflows/: MirrorRepository  MirrorRepository.yml  UpdateRepo.yml
Client/include/: Button.hpp  Components.hpp  Constants.hpp  Enemy.hpp  HitBox.hpp  IGraphics.hpp  Input.hpp  Loopable.hpp  Missile.hpp  Player.hpp  Sound.hpp  Sprite.hpp  Window.hpp  mainLoop.hpp
Client/src/: Enemy.cpp  HitBox.cpp  Input.cpp  Missile.cpp  Player.cpp  RTypeClientTest.cpp  Window.cpp  main.cpp
ECS-Test/: Entity.hpp  Sparse.hpp  main.cpp
Engine/Network/: NLib.hpp  Network.hpp
Server/assets/: boss.txt  enemy.txt
Server/include/: Components.hpp  Enemy.hpp  InitServer.hpp  Parser.hpp  Registry.hpp  Server.hpp  Sparse.hpp  UdpServer.hpp  playerData.hpp
Server/src/: Enemy.cpp  InitServer.cpp  Parser.cpp  Server.cpp  UdpServer.cpp  main.cpp  playerData.cpp
docs/: Class.txt  Doxyfile  RFC.txt
docs/docs/html/: Button_8hpp.html  Button_8hpp_source.html  Client_2src_2main_8cpp.html  Components_8hpp.html  Components_8hpp_source.html  Entity_8hpp.html  Entity_8hpp_source.html  IGraphics_8hpp.html  IGraphics_8hpp_source.html  InitServer_8cpp.html  InitServer_8hpp.html  InitServer_8hpp_source.html  Input_8cpp.html  Input_8hpp.html  Input_8hpp_source.html  Missile_8cpp.html  Missile_8hpp.html  Missile_8hpp_source.html  RTypeClientTest_8cpp.html  Registry_8hpp.html  Registry_8hpp_source.html  Server_2src_2main_8cpp.html  Sound_8hpp.html  Sound_8hpp_source.html  Sparse_8hpp.html  Sparse_8hpp_source.html  Sprite_8hpp.html  Sprite_8hpp_source.html  UdpServer_8cpp.html  UdpServer_8hpp.html  UdpServer_8hpp_source.html  annotated.html  classEntity-members.html  classEntity.html  classInput-members.html  classInput.html  classMissile-members.html  classMissile.html  classPlayer-members.html  classPlayer.html  (+39 more)
docs/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  (+56 more)
docs/docs/latex/: Button_8hpp.tex  Client_2src_2main_8cpp.tex  Components_8hpp.tex  Entity_8hpp.tex  IGraphics_8hpp.tex  InitServer_8cpp.tex  InitServer_8hpp.tex  Input_8cpp.tex  Input_8hpp.tex  Missile_8cpp.tex  Missile_8hpp.tex  RTypeClientTest_8cpp.tex  Registry_8hpp.tex  Server_2src_2main_8cpp.tex  Sound_8hpp.tex  Sparse_8hpp.tex  Sprite_8hpp.tex  UdpServer_8cpp.tex  UdpServer_8hpp.tex  annotated.tex  classEntity.tex  classInput.tex  classMissile.tex  classPlayer.tex  classRegistry.tex  classSfmlWindow.tex  classSound.tex  classSparse__array.tex  classSpriteManager.tex  classUdpServer.tex  dir_1a445cb237d74f7a5f8d11ec3b0585cc.tex  dir_30ff900869959b17197a70705703ad2d.tex  dir_71db3c9ac669ad0e48d6cd88f7e1e924.tex  dir_922c588100a187620fdc1533bc178f73.tex  dir_e21a975877c3b6a07268dea683df1add.tex  dir_e93d5f3671a8729ca6e797e9a8fbc34c.tex  files.tex  mainLoop_8hpp.tex  playerData_8cpp.tex  playerData_8hpp.tex  (+3 more)
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html
docs/html/search/: all_1.js  functions_0.js  functions_1.js
docs/latex/: files.tex  main_8cpp.tex  refman.tex
include/: Sparse.hpp  ecs.hpp
server/include/: UdpServer.hpp
server/src/: UdpServer.cpp  main.cpp
src/: ecs.cpp  main.cpp
